<resources>
    <string name="app_name">Icare</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Name">Name</string>
    <string name="age">Age</string>
    <string name="blood_group">Blood Group</string>
    <string name="Date_Of_Birth">Birth Date(DD/MM/YYYY)</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight</string>
    <string name="Save">Save</string>
    <string name="createDietChart">Create Diet Chart</string>
    <string name="alarm">Set Alarm</string>
    <string name="dateOfDiet">Date Of Diet</string>
    <string name="timeOfDiet">Time Of Diet</string>
    <string name="myfeastName">Feast name</string>
    <string name="myfeastManu">Feast manu</string>
    <string name="Special_comment">Special Comment</string>
    <string name="Create_Profile">Create Profile</string>
    <string name="My_Profile">My Profile</string>
    <string name="Update">Update</string>
    <string name="load"></string>
    <string name="myDietChart">Diet Chart</string>
    <string name="todayDiet">Diet Chart of The Day</string>
    <string name="upComingDiet">Upcoming Diet Chart</string>
    <string name="Friday">16/01/2015 Friday</string>
    <string name="image">Loading!!!</string>
    <string name="time">Time</string>
    <string name="manu">Feast manu</string>
    <string name="home">ICare Diet Home</string>
    <string name="menu_Home"> Home</string>
    <string name="food">Event Name</string>
    <string name="addDailyDiet">Add Your Daily Diet</string>
    <string name="title_activity_icare_splash">ICare Splash</string>
    <string name="title_activity_icare_profile_preview">Profile Preview</string>
    <string name="title_activity_icare_profile_preview_acitvity">ICare Profile Preview</string>
    <string name="title_activity_icare_create_diet_chart">ICare Create Diet Chart</string>
    <string name="title_activity_icare_diet_list">ICare Diet List</string>
    <string name="title_activity_icare_daily_diet_chart_view">Daily Diet Chart View </string>
    <string name="title_activity_icare_diet_history">ICare Diet History</string>
    <string name="title_doctor_profile_create">Create Doctor Profile</string>
    <string name="title_home">I Care Home</string>


    <string name="radioAll">All</string>
    <string name="radioWeek">Weekly</string>
    <string name="radioMonth">Monthly</string>
    <string name="pickDiet">Pick Diet Date</string>
    <string name="myDietChartHistory">My Diet Chart History</string>
    <string name="history">History</string>
    <string name="createDiet">Create Diet</string>
    <string name="myprofile">My Profile</string>
    <string name="date">Date</string>
    <string name="deleteProfile">Delete</string>
    <string name="myfeastMenu">Feast menu</string>
    <string name="successfullySaved">Successfully Saved</string>
    <string name="notSaved">Not Saved</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="successfullyUpdated">Successfully Updated</string>
    <string name="notUpdated">Not Updated</string>
    <string name="editData">Edit Data</string>
    <string name="selectData">Select Data</string>
    <string name="deleteData">Delete Data</string>
    <string name="title_doctor_list">Doctor List</string>
    <string-array name="bloodGroup">
        <item>A+</item>
        <item>B+</item>
        <item>O+</item>
        <item>France</item>
        <item>Italy</item>
        <item>Singapore</item>
        <item>New Zealand</item>
        <item>India</item>
    </string-array>

    <string name="blood_prompt">Choose Blood Group</string>
</resources>
