<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/viewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/viewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginRight="5dp"
            android:text="@string/food"
            android:textColor="#00007D" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:text="@string/date"
            android:textColor="#00007D" />

        <TextView
            android:id="@+id/viewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:text="@string/time"
            android:textColor="#00007D" />

        <ImageView
            android:id="@+id/imageAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/hello_world"
            android:src="@drawable/alarm" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/viewManu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manu"
            android:textColor="#00007D" />
    </LinearLayout>

</LinearLayout>