<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="548dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/viewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageViewCreate"
            android:layout_alignParentTop="true"
            android:layout_marginTop="33dp"
            android:ems="10"
            android:hint="@string/Name" />

        <EditText
            android:id="@+id/viewAge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/viewName"
            android:layout_below="@+id/viewName"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="text" />

        <EditText
            android:id="@+id/viewBloodGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/viewAge"
            android:layout_below="@+id/viewAge"
            android:ems="10"
            android:hint="@string/blood_group"
            android:inputType="text" />

        <EditText
            android:id="@+id/viewDOB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/viewBloodGroup"
            android:layout_below="@+id/viewBloodGroup"
            android:ems="10"
            android:hint="@string/Date_Of_Birth"
            android:inputType="date|text" />

        <EditText
            android:id="@+id/viewWeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/viewDOB"
            android:layout_below="@+id/viewDOB"
            android:ems="10"
            android:hint="@string/Weight"
            android:inputType="number" />

        <EditText
            android:id="@+id/viewHeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/viewWeight"
            android:layout_below="@+id/viewWeight"
            android:ems="10"
            android:hint="@string/Height"
            android:inputType="number" />

        <EditText
            android:id="@+id/viewSpComment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/viewHeight"
            android:layout_below="@+id/viewHeight"
            android:ems="10"
            android:hint="@string/Special_comment"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/My_Profile"

            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/textView1"
            android:layout_marginRight="14dp"
            android:layout_toLeftOf="@+id/textView1"
            android:contentDescription="@drawable/my"
            android:src="@drawable/my" />

        <Button
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/viewSpComment"
            android:layout_below="@+id/viewSpComment"
            android:layout_marginTop="47dp"
            android:background="#58D3F7"
            android:drawableLeft="@drawable/update"
            android:onClick="updateProfile"
            android:padding="10dp"
            android:text="@string/Update"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/imageViewDob"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/imageViewweight"
            android:layout_below="@+id/viewBloodGroup"
            android:contentDescription="@drawable/dob"
            android:src="@drawable/dob" />

        <ImageView
            android:id="@+id/imageViewweight"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/imageViewheight"
            android:layout_below="@+id/viewDOB"
            android:contentDescription="@drawable/weight"
            android:src="@drawable/weight" />

        <ImageView
            android:id="@+id/imageViewsp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@drawable/sp"
            android:src="@drawable/sp"
            android:layout_below="@+id/viewHeight"
            android:layout_alignRight="@+id/imageViewDob"
            android:layout_alignEnd="@+id/imageViewDob" />

        <ImageView
            android:id="@+id/imageViewheight"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/viewHeight"
            android:contentDescription="@drawable/height"
            android:src="@drawable/height" />

        <ImageView
            android:id="@+id/imageViewBlood"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/viewBloodGroup"
            android:contentDescription="@drawable/blood"
            android:src="@drawable/blood" />

        <ImageView
            android:id="@+id/imageViewAge"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/viewAge"
            android:contentDescription="@drawable/age"
            android:src="@drawable/age" />

        <ImageView
            android:id="@+id/imageViewName"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/viewName"
            android:contentDescription="@drawable/name"
            android:src="@drawable/name" />

        <Button
            android:id="@+id/buttonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#58D3F7"
            android:drawableLeft="@drawable/home"
            android:padding="10dp"
            android:text="Home"
            android:textColor="@android:color/white"
            android:layout_alignTop="@+id/update"
            android:layout_toRightOf="@+id/imageViewsp"
            android:layout_toEndOf="@+id/imageViewsp"
            android:layout_alignBottom="@+id/update" />
    </RelativeLayout>

</ScrollView>