<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    tools:context=".ProfileCreate"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/createUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageViewCreate"
            android:layout_alignParentTop="true"
            android:layout_marginTop="33dp"
            android:ems="10"
            android:hint="@string/Name" />

        <EditText
            android:id="@+id/createAge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createUserName"
            android:layout_below="@+id/createUserName"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="text" />
        <!--<Spinner-->
            <!--android:id="@+id/createBloodGroup"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignLeft="@+id/createAge"-->
            <!--android:layout_below="@+id/createAge"-->
            <!--android:entries="@array/bloodGroup"-->
            <!--android:prompt="@string/blood_prompt" />-->

        <EditText
            android:id="@+id/createBloodGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createAge"
            android:layout_below="@+id/createAge"
            android:ems="10"
            android:hint="@string/blood_group"
            android:inputType="text" />

        <EditText
            android:id="@+id/createDateOfBirth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createBloodGroup"
            android:layout_below="@+id/createBloodGroup"
            android:ems="10"
            android:hint="@string/Date_Of_Birth"
            android:inputType="date|text" />

        <EditText
            android:id="@+id/createWeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createDateOfBirth"
            android:layout_below="@+id/createDateOfBirth"
            android:ems="10"
            android:hint="@string/Weight"
            android:inputType="number" />

        <EditText
            android:id="@+id/createHeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createWeight"
            android:layout_below="@+id/createWeight"
            android:ems="10"
            android:hint="@string/Height"
            android:inputType="number" />

        <EditText
            android:id="@+id/createSpecialComment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createHeight"
            android:layout_below="@+id/createHeight"
            android:ems="10"
            android:hint="@string/Special_comment"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/Create_Profile"

            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_marginTop="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignBottom="@+id/textView1"
            android:layout_marginRight="14dp"
            android:layout_toLeftOf="@+id/textView1"
            android:contentDescription="@drawable/person"
            android:src="@drawable/person" />

        <ImageView
            android:id="@+id/imageViewMname"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/imageViewDob"
            android:layout_alignTop="@+id/createBloodGroup"
            android:contentDescription="@drawable/mname"
            android:src="@drawable/blood" />

        <Button
            android:id="@+id/Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#58D3F7"
            android:gravity="center"
            android:drawableLeft="@drawable/save"
            android:onClick="createProfile"
            android:padding="10dp"
            android:text="@string/Save"
            android:textColor="@android:color/white"

            android:layout_below="@+id/createSpecialComment"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignStart="@+id/textView1" />

        <ImageView
            android:id="@+id/imageViewDob"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignTop="@+id/createDateOfBirth"
            android:layout_toLeftOf="@+id/createDateOfBirth"
            android:contentDescription="@drawable/dob"
            android:src="@drawable/dob" />

        <ImageView
            android:id="@+id/imageViewweight"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/imageViewDob"
            android:layout_below="@+id/createDateOfBirth"
            android:contentDescription="@drawable/weight"
            android:src="@drawable/weight" />

        <ImageView
            android:id="@+id/imageViewheight"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/imageViewweight"
            android:layout_alignTop="@+id/createHeight"
            android:contentDescription="@drawable/height"
            android:src="@drawable/height" />

        <ImageView
            android:id="@+id/imageViewName"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignTop="@+id/createUserName"
            android:layout_toLeftOf="@+id/createUserName"
            android:contentDescription="@drawable/name"
            android:src="@drawable/name" />

        <ImageView
            android:id="@+id/imageViewFname"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@+id/createUserName"
            android:layout_toLeftOf="@+id/createUserName"
            android:contentDescription="@drawable/age"
            android:src="@drawable/age" />

        <ImageView
            android:id="@+id/imageViewsp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_below="@+id/createHeight"
            android:layout_toLeftOf="@+id/createHeight"
            android:contentDescription="@drawable/sp"
            android:src="@drawable/sp" />

    </RelativeLayout>

</ScrollView>