<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DietChartHistory" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:contentDescription="@drawable/diet"
            android:src="@drawable/diet" />

        <TextView
            android:id="@+id/textMyDietChartHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"

            android:gravity="center"
            android:padding="5dp"
            android:text="@string/myDietChartHistory"

            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="viweAllData"
                android:text="@string/radioAll"
                android:textColor="#0052A3" />

            <RadioButton
                android:id="@+id/radioWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="viewWeeklyData"
                android:text="@string/radioWeek"
                android:textColor="#0052A3" />

            <RadioButton
                android:id="@+id/radioMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="viewMonthlyData"
                android:text="@string/radioMonth"
                android:textColor="#0052A3" />
        </RadioGroup>

        <ListView
            android:id="@+id/lvDietChartHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>