<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:context=".DietListTodayAndUpcoming" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:contentDescription="@drawable/home"
            android:src="@drawable/home" />

        <TextView
            android:id="@+id/myDietChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="#FFFFFFFF"
            android:padding="5dp"
            android:text="@string/home"

            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/myTodayDietChartView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/day"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/todayDiet"
            android:textColor="#0052A3"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lvTodayDietChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvUpComingDietChartView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/upcoming"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/upComingDiet"
            android:textColor="#0052A3"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lvUpComingDietChart"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF" />
    </LinearLayout>

</LinearLayout>